--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
 <!DOCTYPE HTML>
+
 <head>
-  <title>VisuHTML - Visualize seu HTML</title>
+  <title>IPETEQS_JS - Interpretador de PETEQS em Javascript</title>
 
   <meta charset="utf-8"></meta>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css"/> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-  <div class="row">
-    <div class="col">
-      <textarea id="codearea" name='input'></textarea>
-      <button class="btn btn-success"
-      onclick="PeteqsHelper.execute(document.querySelector('#codearea').value,document.querySelector('#visualizacao'))">
-      EXECUTAR
-    </button>
-      </div>
-    <div class="col">
-        <div id="visualizacao">
 
+<body>
+  <div>
+    <header id="header" class="navbar navbar-expand-lg navbar-light bg-light">
+      <!-- Header-->
+      <i class="material-icons">build</i>
+      <a class="navbar-brand" href="index.php"> IPETEQS_JS</a>
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.leonnasc.com">Mais projetos </a>
+        </li>
+      </ul>
+    </header>
+    <!-- Fim do header-->
+
+    <div class="card container-fluid">
+      <div class="row">
+        <div class="col-md-6 col-xs-12">
+          <h1>Código</h1>
+          <textarea id="codearea" name='input'></textarea>
+          <button class="btn btn-success" onclick="PeteqsHelper.execute(document.querySelector('#codearea').value,document.querySelector('#visualizacao'))">
+            <i class="material-icons">play_arrow</i>EXECUTAR
+          </button>
+        </div>
+        <div class="col-md-6 col-xs-12">
+          <h1>Terminal</h1>
+          <div id="visualizacao">
+
+          </div>
         </div>
       </div>
+    </div>
   </div>
-
   <script src="ipeteqs.js"></script>
 </body>
