Consertados: PQ_Print, divisão,fim

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
   <div>
-    <header id="header" class="navbar navbar-expand-lg navbar-light bg-light">
+    <header id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- Header-->
-      <i class="material-icons">build</i>
-      <a class="navbar-brand" href="index.php"> IPETEQS_JS</a>
+      <i style="color:white"class="material-icons">build</i>
+      <a class="navbar-brand" href="index.php">&nbsp :: IPETEQS_JS</a>
 
       <ul class="navbar-nav">
         <li class="nav-item">
