Acerto de estruturas e início documentação

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- Header-->
       <i style="color:white"class="material-icons">build</i>
-      <a class="navbar-brand" href="index.php">&nbsp :: IPETEQS_JS</a>
+      <a class="navbar-brand" href="index.html">&nbsp :: IPETEQS_JS</a>
 
       <ul class="navbar-nav">
         <li class="nav-item">
