--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="http://www.leonnasc.com">Mais projetos </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/LeonNasc/ipeteqsJS"> Código fonte e documentação </a>
+        </li>
       </ul>
     </header>
     <!-- Fim do header-->
