--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -15,7 +16,7 @@
     <header id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- Header-->
       <div id="logo">
-        <i id="logo-logo" class="material-icons">build</i>
+        <i class="logo-logo material-icons">build</i>
         <a class="navbar-brand" href="index.html">&nbsp:: IPETEQS_JS</a>
       </div>
 
@@ -29,32 +30,34 @@
       </ul>
     </header>
     <!-- Fim do header-->
+
+
     <div id="titles" class="row">
       <div class="col">
-        <h4 style>Código</h4>
-      </div>
-      <div class="col">
-        <h4>Terminal</h4>
+        <button class="btn btn-success" onclick="PeteqsHelper.execute(document.querySelector('#codearea').value,document.querySelector('#visualizacao'))">
+            <i style="vertical-align:middle" class="material-icons">play_arrow</i>Executar
+          </button>
+
+          <button class="btn btn-success" onclick="abrirCodigoJavascript()">
+            <i style="vertical-align:middle" class="material-icons">play_arrow</i>Ver código traduzido
+          </button>
       </div>
     </div>
 
-    <div class="container-fluid">
+    <main class="container-fluid">
       <div class="row">
-        <div class="col-md-6 col-xs-12">
-          
+        <div class="col-md-7 col-xs-12">          
           <textarea id="codearea" name='input'></textarea>
-          <button class="btn btn-success" onclick="PeteqsHelper.execute(document.querySelector('#codearea').value,document.querySelector('#visualizacao'))">
-            <i class="material-icons">play_arrow</i>EXECUTAR
-          </button>
         </div>
-        <div class="col-md-6 col-xs-12">          
+        <div class="col-md-5 col-xs-12">          
           <div id="visualizacao">
-
+            RESULTADO : <span class="blink_me">&block;</span>
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </div>
   <script src="ipeteqs.js"></script>
+  <script src="beautifier.js"></script>
   <script src="utilCEDERJ.js"></script>
 </body>
